force-app/main/default/objects/Billing_Address__c/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Account_Name__r.Id,Account_Name__r.Name)</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>