force-app/main/default/objects/Billing_Address__c/fields/Billing_Address_Full_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Full_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Billing_Address_Full_ID</label>
    <type>Text</type>
</CustomField>