force-app/main/default/objects/Billing_Address__c/fields/Billing_BvD_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_BvD_ID__c</fullName>
    <label>Billing BvD ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>