force-app/main/default/objects/Billing_Address__c/fields/GSTN__c.field-meta.xml
<CustomField>
    <fullName>GSTN__c</fullName>
    <label>GSTN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>