force-app/main/default/objects/Billing_Address__c/fields/Is_Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Billing Address</label>
    <type>Checkbox</type>
</CustomField>