force-app/main/default/objects/Billing_Address__c/fields/Ship_to_GST_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_GST_Customer_Type__c</fullName>
    <label>Ship-to GST Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Unregistered</fullName>
            </value>
            <value>
                <fullName>SEZ Unit</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>