force-app/main/default/objects/Billing_Address__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <formula>IF( ISPICKVAL(Account_Name__r.Account_Classification__c, &quot;Export&quot;), &quot;97&quot;, 
CASE(BillingState__c,      
&quot;Andaman and Nicobar Islands&quot;,&quot;35&quot;,
&quot;AN&quot;,&quot;35&quot;,
&quot;Andhra Pradesh&quot;,&quot;28&quot;,
&quot;Andhra Pradesh (New)&quot;,&quot;37&quot;,
&quot;Arunachal Pradesh&quot;,&quot;12&quot;,
&quot;AR&quot;,&quot;12&quot;,
&quot;Assam&quot;,&quot;18&quot;,
&quot;AS&quot;,&quot;18&quot;,
&quot;Bihar&quot;,&quot;10&quot;,
&quot;BH&quot;,&quot;10&quot;,
&quot;Chandigarh&quot;,&quot;04&quot;,
&quot;CH&quot;,&quot;04&quot;,
&quot;Chhattisgarh&quot;,&quot;22&quot;,
&quot;CT&quot;,&quot;22&quot;,
&quot;Dadra and Nagar Haveli&quot;,&quot;26&quot;,
&quot;DN&quot;,&quot;26&quot;,
&quot;Daman and Diu&quot;,&quot;25&quot;,
&quot;DD&quot;,&quot;25&quot;,
&quot;Delhi&quot;,&quot;07&quot;,
&quot;DL&quot;,&quot;07&quot;,
&quot;Goa&quot;,&quot;30&quot;,
&quot;GA&quot;,&quot;30&quot;,
&quot;Gujarat&quot;,&quot;24&quot;,
&quot;GJ&quot;,&quot;24&quot;,
&quot;Haryana&quot;,&quot;06&quot;,
&quot;HR&quot;,&quot;06&quot;,
&quot;Himachal Pradesh&quot;,&quot;02&quot;,
&quot;HP&quot;,&quot;02&quot;,
&quot;Jammu and Kashmir&quot;,&quot;01&quot;,
&quot;JK&quot;,&quot;01&quot;,
&quot;Jharkhand&quot;,&quot;20&quot;,
&quot;JH&quot;,&quot;20&quot;,
&quot;Karnataka&quot;,&quot;29&quot;,
&quot;KA&quot;,&quot;29&quot;,
&quot;Kerala&quot;,&quot;32&quot;,
&quot;KL&quot;,&quot;32&quot;,
&quot;Lakshadweep&quot;,&quot;31&quot;,
&quot;LD&quot;,&quot;31&quot;,
&quot;Madhya Pradesh&quot;,&quot;23&quot;,
&quot;MP&quot;,&quot;23&quot;,
&quot;Maharashtra&quot;,&quot;27&quot;,
&quot;MH&quot;,&quot;27&quot;,
&quot;Manipur&quot;,&quot;14&quot;,
&quot;MN&quot;,&quot;14&quot;,
&quot;Meghalaya&quot;,&quot;17&quot;,
&quot;ME&quot;,&quot;17&quot;,
&quot;Mizoram&quot;,&quot;15&quot;,
&quot;MI&quot;,&quot;15&quot;,
&quot;Nagaland&quot;,&quot;13&quot;,
&quot;NL&quot;,&quot;13&quot;,
&quot;Odisha&quot;,&quot;21&quot;,
&quot;OR&quot;,&quot;21&quot;,
&quot;Puducherry&quot;,&quot;34&quot;,
&quot;PY&quot;,&quot;34&quot;,
&quot;Punjab&quot;,&quot;03&quot;,
&quot;PB&quot;,&quot;03&quot;,
&quot;Rajasthan&quot;,&quot;08&quot;,
&quot;RJ&quot;,&quot;08&quot;,
&quot;Sikkim&quot;,&quot;11&quot;,
&quot;SK&quot;,&quot;11&quot;,
&quot;Tamil Nadu&quot;,&quot;33&quot;,
&quot;TN&quot;,&quot;33&quot;,
&quot;Telangana&quot;,&quot;36&quot;,
&quot;TS&quot;,&quot;36&quot;,
&quot;Tripura&quot;,&quot;16&quot;,
&quot;TR&quot;,&quot;16&quot;,
&quot;Uttar Pradesh&quot;,&quot;09&quot;,
&quot;UP&quot;,&quot;09&quot;,
&quot;Uttarakhand&quot;,&quot;05&quot;,
&quot;UT&quot;,&quot;05&quot;,
&quot;West Bengal&quot;,&quot;19&quot;,
&quot;WB&quot;,&quot;19&quot;,
&quot;0&quot;
))</formula>
    <label>State Code</label>
    <type>Text</type>
</CustomField>