force-app/main/default/objects/Billing_Address__c/fields/Tax_GST_Classification__c.field-meta.xml
<CustomField>
    <fullName>Tax_GST_Classification__c</fullName>
    <label>Tax/GST Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-SEZ</fullName>
                <label>Non - SEZ</label>
            </value>
            <value>
                <fullName>SEZ</fullName>
                <label>SEZ With Tax</label>
            </value>
            <value>
                <fullName>SEZ Without Tax</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>