force-app/main/default/objects/Billing_Address__c/validationRules/Billing_State_Mandatory_for_India.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_State_Mandatory_for_India</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(BillingCountry__c, &apos;India&apos;),
				ISPICKVAL(BillingState__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>BillingState__c</errorDisplayField>
    <errorMessage>Billing State is mandatory if the billing country is India</errorMessage>
</ValidationRule>