force-app/main/default/objects/Billing_Address__c/validationRules/GST_and_PAN_should_match.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_and_PAN_should_match</fullName>
    <active>true</active>
    <description>PAN on Account should match with the GST on Billing Address</description>
    <errorConditionFormula>if(AND(NOT(ISBLANK(GSTN__c)),NOT(ISBLANK(Account_Name__r.PAN_Number__c)),MID (GSTN__c,3,10) &lt;&gt; Account_Name__r.PAN_Number__c),true,false)</errorConditionFormula>
    <errorDisplayField>GSTN__c</errorDisplayField>
    <errorMessage>PAN number or GST number is invalid. GST number should contain PAN Number</errorMessage>
</ValidationRule>