force-app/main/default/objects/Billing_Address__c/validationRules/GST_and_State_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_and_State_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(
		NOT(ISBLANK(GSTN__c)),
		State_Code__c!= LEFT(GSTN__c,2),
		ISPICKVAL(BillingCountry__c, &apos;India&apos;)), 
		true, false)</errorConditionFormula>
    <errorDisplayField>BillingState__c</errorDisplayField>
    <errorMessage>State and GST number are not matching. Please provide correct state or GST number</errorMessage>
</ValidationRule>