force-app/main/default/objects/Billing_Address__c/validationRules/GST_Number_should_be_15_character.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Number_should_be_15_character</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(NOT(ISBLANK(GSTN__c)),LEN(GSTN__c)!= 15),true,false)</errorConditionFormula>
    <errorDisplayField>GSTN__c</errorDisplayField>
    <errorMessage>Invalid GST number</errorMessage>
</ValidationRule>