force-app/main/default/objects/Billing_Address__c/validationRules/GSTIN_Regular_Expression.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN_Regular_Expression</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(REGEX(GSTN__c,&quot;\\d{2}[A-Z]{5}\\d{4}[A-Z]{1}[A-Z\\d]{1}[ZD]{1}[A-Z\\d]{1}&quot;)),NOT(ISBLANK(GSTN__c)))</errorConditionFormula>
    <errorDisplayField>GSTN__c</errorDisplayField>
    <errorMessage>Please Enter The Correct GST As Per Regular Expression.</errorMessage>
</ValidationRule>