force-app/main/default/objects/Billing_Address__c/validationRules/In_Export_country_cant_be_India.validationRule-meta.xml
<ValidationRule>
    <fullName>In_Export_country_cant_be_India</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Tax_GST_Classification__c, &quot;Export&quot;),
ISPICKVAL(BillingCountry__c, &quot;India&quot;))</errorConditionFormula>
    <errorMessage>Billing country cannot be India when Tax/GST Classification is Export.</errorMessage>
</ValidationRule>