force-app/main/default/objects/Billing_Address__c/validationRules/No_PAN_No_GST.validationRule-meta.xml
<ValidationRule>
    <fullName>No_PAN_No_GST</fullName>
    <active>true</active>
    <description>Check PAN on Account and allow to enter GST only if PAN is available on Account</description>
    <errorConditionFormula>AND(ISBLANK(Account_Name__r.PAN_Number__c),NOT(ISBLANK(GSTN__c)))</errorConditionFormula>
    <errorMessage>Please update the PAN Number on the Account to update the GSTN</errorMessage>
</ValidationRule>