force-app/main/default/objects/Billing_Address__c/validationRules/Tax_GST_classification_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_GST_classification_is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Tax_GST_Classification__c))</errorConditionFormula>
    <errorDisplayField>Tax_GST_Classification__c</errorDisplayField>
    <errorMessage>Value for Tax/GST Classification is not opted for. Kindly select the same option.</errorMessage>
</ValidationRule>